/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */
buildscript {
  repositories {
    maven {
      url "https://plugins.gradle.org/m2/"
    }
  }
  dependencies {
    classpath "com.gradleup.shadow:shadow-gradle-plugin:8.3.5"
  }
}

plugins {
    id "com.gradleup.shadow" version "8.3.5"
    id 'java'
    id 'application'
}

tasks.withType(JavaCompile) {
     options.compilerArgs << "-XDignore.symbol.file"
     options.compilerArgs << "-Xlint:deprecation"
}

task client(type: JavaExec) {
    mainClass = 'net.minecraft.client.Bootstrap'
    classpath = sourceSets.main.runtimeClasspath
    System.setProperty("java.library.path", "src/main/resources")
}

application {
    mainClass = 'net.minecraft.client.Bootstrap'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

shadowJar {
    manifest {
        attributes 'Main-Class': 'net.minecraft.client.Bootstrap'
    }
}



apply plugin: 'com.gradleup.shadow'
apply plugin: 'java'

dependencies {
    implementation libs.guava

    implementation fileTree(dir: '${project.projectDir}/src/main/resources', include: ['*.jar'])

}

tasks.withType(JavaExec) {
    systemProperty "java.library.path", file("${project.projectDir}/src/main/resources").absolutePath
}

// tasks.withType(JavaExec) {
//     jvmArgs += ["--add-exports", "java.base/com.sun=ALL-UNNAMED"]
// }

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}
